<resources>
    <string name="app_name">ExamPractice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="exam_labs">Exam Labs</string>
    <string name="account">Account</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello  fragment</string>
    <string name="category">category</string>
    <string name="e_mail_id">E-mail Id</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="web_server_id">1041795345925-keparglrkhqcmdlqls2getl30c0n7dpm.apps.googleusercontent.com</string>

</resources>